modify link label

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="compressedstyle.css">
 	
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -223,22 +223,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md " aria-label="follow us on twitter"></span></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="twitter"><span class="fa fa-twitter icon-md " aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md" aria-label="follow us on facebook"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="facebook"><span class="fa fa-facebook icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md" aria-label="follow us on dribbble"></span></a>
+							<a class="social" href="https://dribbble.com/" aria-label="dribbble"><span class="fa fa-dribbble icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md" aria-label="follow us on instagram"></span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="instagram"><span class="fa fa-instagram icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 				</div>
