--- a/page2.html
+++ b/page2.html
@@ -122,22 +122,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md" aria-label="follow us on twitter"></span></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="twitter"><span class="fa fa-twitter icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md" aria-label="follow us on facebook"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="facebook"><span class="fa fa-facebook icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md" aria-label="follow us on dribbble"></span></a>
+							<a class="social" href="https://dribbble.com/" aria-label="dribbble"><span class="fa fa-dribbble icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3 col-xs-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md" aria-label="follow us on instagram"></span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="instagram"><span class="fa fa-instagram icon-md" aria-hidden="true"></span></a>
 						</div>
 					</div>
 				</div>
